# water.rs

./: Cargo.toml  README  README.md  endpoint.rs  net.rs  rawmessage.rs  timespec.rs  water.rs
benches/: mpsc.rs  pingpong.rs  queuefight.rs
src/: allocmutex.rs  clonemessage.rs  compat.rs  endpoint.rs  lib.rs  message.rs  net.rs  queue.rs  rawmessage.rs  syncmessage.rs  tcp.rs  timespec.rs
src/tcp/: connector.rs  listener.rs  mod.rs
tests/: basic.rs  checkcompat.rs  mpmcqueue.rs  pingpong.rs  practicalengine.rs  safesync.rs  tcpnet.rs
