[package]

name = "water"
version = "0.2.8-alpha"
authors = ["kmcguire <kmcg3413@gmail.com>"]
description = "A Rust library that provides a thread-safe distributed message sending facility supporting synchronous and asynchronous I/O."
homepage = "https://github.com/kmcguire3413/water.rs"
license = "GPL-3.0"